gccida/c2/timevar_push
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:734:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v3 = stack_0; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:735:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
if ( stack_0 ) 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:737:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v4 = stack_0->timevar; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:738:54: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v4->elapsed.user = ( float)( v2 - start_time.user) + stack_0->timevar->elapsed.user; 
                                                     ^~~~~~~
                                                     stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:751:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v3 = stack_0; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:755:1: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = v5; 
^~~~~~~
stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/timevar_push/src/obj/timevar.o] Error 1
